--- a/register.html
+++ b/register.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="https://www.hexschool.com/favicon.ico">
+    <meta name='description' content="RWD作業" />
+    <meta name="keywords" content="響應式, 六角西餐廳">
+    <meta property="og:title" content="RWD作業" />
+    <meta property="og:description" content="RWD作業">
+    <meta property="og:type" content="website" /> 
+    <meta property="og:url" content="FB上的網址" />
+    <meta property="og:image" content="https://i.imgur.com/WbNu8xl.jpg" />
     <title>六角西餐廳</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css'/>
     <link rel="stylesheet" href="css/all.css">
-    <script src="js/jquery-3.1.1.min.js"></script>
-    <script src="js/all.js"></script>
 </head>
 <body>
     <div class="wrap">
@@ -87,5 +92,6 @@
         </div>
     </div>
     <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/all.js"></script>
 </body>
 </html>
