--- a/cart.html
+++ b/cart.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="https://www.hexschool.com/favicon.ico">
+    <meta name='description' content="RWD作業" />
+    <meta name="keywords" content="響應式, 六角西餐廳">
+    <meta property="og:title" content="RWD作業" />
+    <meta property="og:description" content="RWD作業">
+    <meta property="og:type" content="website" /> 
+    <meta property="og:url" content="FB上的網址" />
+    <meta property="og:image" content="https://i.imgur.com/WbNu8xl.jpg" />
     <title>六角西餐廳</title>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css'/>
     <link rel="stylesheet" href="css/all.css">
-    <script src="js/jquery-3.1.1.min.js"></script>
-    <script src="js/all.js"></script>
 </head>
 <body>
     <div class="wrap">
@@ -61,7 +67,7 @@
                         <div class="prod">
                             <i class="far fa-heart"></i>
                             <div class="ribbon ribbon-top-right"><span>熱銷美食</span></div>
-                            <img src="/img/assets/product_1.png" alt="product_1">
+                            <img src="img/assets/product_1.png" alt="product_1">
                             <div class="prod-text">
                                 <h4>經典漢堡套餐</h4>
                                 <h5>Classic Hamburger Package</h5>
@@ -72,7 +78,7 @@
                         </div>
                         <div class="prod">
                             <i class="far fa-heart"></i>
-                            <img src="/img/assets/product_2.png" alt="product_2">
+                            <img src="img/assets/product_2.png" alt="product_2">
                             <div class="prod-text">
                                 <h4>英俊香腸</h4>
                                 <h5>Handsome Sausage</h5>
@@ -83,7 +89,7 @@
                         </div>
                         <div class="prod">
                             <i class="far fa-heart"></i>
-                            <img src="/img/assets/product_3.png" alt="product_3">
+                            <img src="img/assets/product_3.png" alt="product_3">
                             <div class="prod-text">
                                 <h4>漢堡兄弟</h4>
                                 <h5>Hamburg Brothers</h5>
@@ -94,7 +100,7 @@
                         </div>
                         <div class="prod">
                             <i class="fas fa-heart"></i>
-                            <img src="/img/assets/product_4.png" alt="product_4">
+                            <img src="img/assets/product_4.png" alt="product_4">
                             <div class="prod-text">
                                 <h4>完美願望</h4>
                                 <h5>Dragon Ball Package</h5>
@@ -135,5 +141,6 @@
         </div>
     </div>
     <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/all.js"></script>
 </body>
 </html>
