--- a/login.html
+++ b/login.html
@@ -7,11 +7,12 @@
     <link rel="icon" href="https://www.hexschool.com/favicon.ico">
     <meta name='description' content="RWD作業" />
     <meta name="keywords" content="響應式, 六角西餐廳">
-    <meta property="og:title" content="RWD作業" />
-    <meta property="og:description" content="RWD作業">
+    <meta property="og:title" content="六角西餐廳-RWD作業" />
+    <meta property="og:description" content="試著做出響應式網頁">
     <meta property="og:type" content="website" /> 
-    <meta property="og:url" content="FB上的網址" />
+    <meta property="og:url" content="https://zyc0626.github.io/HEX-RWD-Project/index.html" />
     <meta property="og:image" content="https://i.imgur.com/WbNu8xl.jpg" />
+    <meta property="og:image:alt" content="六角西餐廳-RWD作業" />
     <title>六角西餐廳</title>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css'/>
     <link rel="stylesheet" href="css/all.css">
