modify and Add Scss

--- a/cart.html
+++ b/cart.html
@@ -64,8 +64,8 @@
                             <a href="#" class="car"><i class="fas fa-shopping-cart"><span>1</span></i></a>
                         </div>
                     </div>
-                    <div class="prodlist">
-                        <div class="prod">
+                    <ul class="prodlist">
+                        <li class="prod">
                             <i class="far fa-heart"></i>
                             <div class="ribbon ribbon-top-right"><span>熱銷美食</span></div>
                             <img src="img/assets/product_1.png" alt="product_1">
@@ -76,8 +76,8 @@
                                 <p>$<span>120</span></p>
                                 <a href="#"><i class="fas fa-shopping-cart"></i> 加入購物車</a>
                             </div>
-                        </div>
-                        <div class="prod">
+                        </li>
+                        <li class="prod">
                             <i class="far fa-heart"></i>
                             <img src="img/assets/product_2.png" alt="product_2">
                             <div class="prod-text">
@@ -87,8 +87,8 @@
                                 <p>$<span>1,024</span></p>
                                 <a href="#"><i class="fas fa-shopping-cart"></i> 加入購物車</a>
                             </div>
-                        </div>
-                        <div class="prod">
+                        </li>
+                        <li class="prod">
                             <i class="far fa-heart"></i>
                             <img src="img/assets/product_3.png" alt="product_3">
                             <div class="prod-text">
@@ -98,8 +98,8 @@
                                 <p>$<span>792</span></p>
                                 <a href="#"><i class="fas fa-shopping-cart"></i> 加入購物車</a>
                             </div>
-                        </div>
-                        <div class="prod">
+                        </li>
+                        <li class="prod">
                             <i class="fas fa-heart"></i>
                             <img src="img/assets/product_4.png" alt="product_4">
                             <div class="prod-text">
@@ -109,8 +109,8 @@
                                 <p>$<span>999,999</span></p>
                                 <a href="#"><i class="fas fa-shopping-cart"></i> 加入購物車</a>
                             </div>
-                        </div>
-                    </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -129,9 +129,7 @@
                     </ul>
                 </div>
                 <div class="connect">
-                    <div class="logo">
-                        <h3><a href="#">六角西餐廳</a></h2>
-                    </div>
+                    <h3 class="logo"><a href="#">六角西餐廳</a></h2>
                     <ul class="social">
                         <li><a class="fab fa-google-plus-square g_logo" href="#"></a></li>
                         <li><a class="fab fa-twitter-square tw_logo"  href="#"></a></li>
