--- a/_layout.html
+++ b/_layout.html
@@ -58,9 +58,7 @@
                     </ul>
                 </div>
                 <div class="connect">
-                    <div class="logo">
-                        <h3><a href="#">六角西餐廳</a></h2>
-                    </div>
+                    <h3 class="logo"><a href="#">六角西餐廳</a></h2>
                     <ul class="social">
                         <li><a class="fab fa-google-plus-square g_logo" href="#"></a></li>
                         <li><a class="fab fa-twitter-square tw_logo"  href="#"></a></li>
